# meshplex

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  genindex.html  index.html  justfile  objects.inv  pacman-optimized.vtk  pacman.vtk  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sphere.vtk  test_requirements.txt  tetrahedron.vtk  tox.ini  toy.vtk
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
doc/: Makefile  conf.py  index.rst
docs/: conf.py  index.rst  requirements.txt
experimental/: ce_smoothing.py
logo/: logo.py
meshplex/: __about__.py  __init__.py  _exceptions.py  _helpers.py  _mesh.py  _mesh_line.py  _mesh_tetra.py  _mesh_tri.py  base.py  helpers.py  mesh_line.py  mesh_tetra.py  mesh_tri.py  reader.py
src/meshplex/: __about__.py  __init__.py  _helpers.py  _mesh.py  _mesh_tetra.py  _mesh_tri.py  _reader.py
test/: curl_test.py  gradient_test.py  helpers.py  lloyd_test.py  mesh_io_test.py  mesh_line_test.py  mesh_tetra_test.py  mesh_tri_test.py  performance.py  subdomain_test.py  test_ce_ratios.py  test_cell_partitions.py  test_circumcenters.py  test_compute_cell_values.py  test_control_volume_centroid.py  test_control_volume_centroids.py  test_control_volumes.py  test_create_facets.py  test_curl.py  test_degenerate.py  test_gh_issues.py  test_heights.py  test_io.py  test_mesh_io.py  test_mesh_line.py  test_mesh_tetra.py  test_mesh_tri.py  test_remove_cells.py  test_signed_area.py  test_subdomain.py  test_volumes.py
test/mesh_tri/: helpers.py  test_curl.py  test_edge_flip.py  test_gradient.py  test_mesh_tri.py  test_plot.py  test_remove_cells.py  test_remove_points.py  test_signed_area.py
test/meshes/: tetrahedron.vtk  toy.vtk
tests/: .gitignore  curl_test.py  cv_test.py  cv_tests.py  fetch_data.py  gradient_test.py  helpers.py  lloyd_test.py  mesh_io_test.py  mesh_line_test.py  mesh_tetra_test.py  mesh_tri_test.py  performance.py  subdomain_test.py  test_compute_cell_values.py  test_control_volumes.py  test_create_facets.py  test_gh_issues.py  test_heights.py  test_io.py  test_mesh_tetra.py  test_remove_cells.py  test_signed_area.py  test_subdomain.py
tests/mesh_tri/: helpers.py  test_curl.py  test_edge_flip.py  test_genus.py  test_gradient.py  test_mesh_tri.py  test_plot.py  test_remove_points.py
tests/meshes/: pacman-optimized.vtk  pacman.vtk  pacman.vtu  sphere.vtk  toy.vtu
tools/: delaunay_checker  delaunay_maker  lloyd_smoothing  mesh_smoothing  show_mesh
voropy/: __about__.py  __init__.py  base.py  helpers.py  mesh_line.py  mesh_segment.py  mesh_tetra.py  mesh_tri.py  reader.py  smoothing.py
