[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "meshplex"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
description = "Fast tools for simplex meshes"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "meshio >=4, <6",
  "numpy >= 1.20.0",
  "npx >= 0.0.7",
]

[project.urls]
Code = "https://github.com/nschloe/meshplex"
Issues = "https://github.com/nschloe/meshplex/issues"
Funding = "https://github.com/sponsors/nschloe"

[project.optional-dependencies]
all = [
  "matplotlib",
  "scipy",
  "vtk"
]
plot = [
  "matplotlib",
  "vtk"
]

[tool.pytest.ini_options]
filterwarnings = [
  'ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.:UserWarning'
]

[tool.isort]
profile = "black"
