[metadata]
name = meshplex
version = 0.13.0
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Fast tools for simplex meshes,
url = https://github.com/nschloe/meshplex
project_urls =
    Code=https://github.com/nschloe/meshplex
    Issues=https://github.com/nschloe/meshplex/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    importlib_metadata
    meshio >=4, <5
    numpy >= 1.9
    scipy
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
all = matplotlib
plot = matplotlib
