[metadata]
name = meshplex
version = 0.16.6
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Fast tools for simplex meshes
url = https://github.com/nschloe/meshplex
project_urls =
    Code=https://github.com/nschloe/meshplex
    Issues=https://github.com/nschloe/meshplex/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    =src
packages = find:
install_requires =
    meshio >=4, <6
    numpy >= 1.20.0
    npx >= 0.0.7
python_requires = >=3.7

[options.packages.find]
where=src

[options.extras_require]
all =
  matplotlib
  scipy
  vtk
plot =
  matplotlib
  vtk
